--- a/src/main/resources/com/example/gplapplication/hello-view.fxml
+++ b/src/main/resources/com/example/gplapplication/hello-view.fxml
@@ -1,34 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.canvas.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
 
 <GridPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gplapplication.HelloController">
+
+
+   <HBox style="-fx-padding: 2;" GridPane.rowIndex="1">
+
+      <children>
+         <Button onAction="#onRunButtonClick" style="-fx-start-margin: 1;" text="Run">
+            <HBox.margin>
+               <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+            </HBox.margin></Button>
+         <Button onAction="#onSyntaxButtonClick" style="-fx-start-margin: 1;" text="Syntax">
+            <HBox.margin>
+               <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+            </HBox.margin></Button>
+      </children>
+      <effect>
+         <Lighting bumpInput="$null">
+            <light>
+               <Light.Distant />
+            </light>
+         </Lighting>
+      </effect>
+   </HBox>
+   <HBox>
+
+
+      <children>
+         <VBox>
+            <VBox.margin>
+               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </VBox.margin>
+            <children>
+               <TextArea fx:id="inputMultipleCodeText" prefHeight="400.0" prefWidth="400.0">
+               </TextArea>
+               <TextField fx:id="inputSingleCodeText">
+               </TextField>
+            </children>
+
+         </VBox>
+         <Label fx:id="welcomeText" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #e8e3e3;">
+            <HBox.margin>
+               <Insets left="5.0" />
+            </HBox.margin></Label>
+      </children>
+   </HBox>
    <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+      <ColumnConstraints />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+      <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
-   <children>
-      <HBox>
-         <children>
-            <VBox>
-               <children>
-                  <TextArea prefHeight="200.0" prefWidth="200.0" />
-                  <TextField />
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-      <HBox GridPane.rowIndex="1">
-         <children>
-             <Button onAction="#onHelloButtonClick" text="Run" />
-            <Button onAction="#onValidateButtonClick" text="Validate" />
-         </children>
-      </HBox>
-   </children>
 </GridPane>
