--- a/src/main/resources/com/example/gplapplication/hello-view.fxml
+++ b/src/main/resources/com/example/gplapplication/hello-view.fxml
@@ -5,21 +5,28 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<GridPane xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gplapplication.HelloController">
+<GridPane prefHeight="599.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gplapplication.HelloController">
 
 
-   <HBox style="-fx-padding: 2;" GridPane.rowIndex="1">
+   <HBox prefHeight="144.0" prefWidth="800.0" style="-fx-padding: 2;" GridPane.rowIndex="1">
 
       <children>
-         <Button onAction="#onRunButtonClick" style="-fx-start-margin: 1;" text="Run">
+         <Button onAction="#onRunButtonClick" prefHeight="30.0" prefWidth="60.0" style="-fx-start-margin: 1; -fx-background-color: green;" text="Run" textAlignment="CENTER" textFill="WHITE">
             <HBox.margin>
-               <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-            </HBox.margin></Button>
-         <Button onAction="#onSyntaxButtonClick" style="-fx-start-margin: 1;" text="Syntax">
+               <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
+            </HBox.margin>
+            <font>
+               <Font name="System Bold Italic" size="14.0" />
+            </font></Button>
+         <Button onAction="#onSyntaxButtonClick" prefHeight="30.0" prefWidth="68.0" style="-fx-start-margin: 1; -fx-background-color: red;" text="Syntax" textFill="WHITE">
             <HBox.margin>
-               <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-            </HBox.margin></Button>
+               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </HBox.margin>
+            <font>
+               <Font name="System Bold Italic" size="14.0" />
+            </font></Button>
       </children>
       <effect>
          <Lighting bumpInput="$null">
@@ -38,15 +45,19 @@
                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </VBox.margin>
             <children>
-               <TextArea fx:id="inputMultipleCodeText" prefHeight="400.0" prefWidth="400.0">
-               </TextArea>
-               <TextField fx:id="inputSingleCodeText" prefHeight="30.0" prefWidth="400.0">
-               </TextField>
+               <TextArea fx:id="inputMultipleCodeText" prefHeight="513.0" prefWidth="595.0">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </VBox.margin></TextArea>
+               <TextField fx:id="inputSingleCodeText" prefHeight="80.0" prefWidth="575.0">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" />
+                  </VBox.margin></TextField>
             </children>
 
          </VBox>
 
-         <VBox>
+         <VBox style="-fx-background-color: lightgray;">
             <VBox.margin>
                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </VBox.margin>
@@ -56,8 +67,17 @@
 <!--                     <Insets left="5.0" />-->
 <!--                  </HBox.margin>-->
 <!--               </Label>-->
-               <Canvas fx:id="canvasId" height="400.0" style="-fx-border-width: 1px; -fx-border-color: black;" width="400.0" />
+               <Canvas fx:id="canvasId" height="478.0" style="-fx-border-width: 1px;" width="405.0">
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin></Canvas>
             </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <HBox.margin>
+               <Insets bottom="10.0" right="10.0" top="10.0" />
+            </HBox.margin>
 
          </VBox>
 
