--- a/src/main/resources/com/narayanjoshi/gplapplication/hello-view.fxml
+++ b/src/main/resources/com/narayanjoshi/gplapplication/hello-view.fxml
@@ -13,20 +13,21 @@
    <HBox prefHeight="144.0" prefWidth="800.0" style="-fx-padding: 2;" GridPane.rowIndex="1">
 
       <children>
-         <Button onAction="#onRunButtonClick" prefHeight="30.0" prefWidth="60.0" style="-fx-start-margin: 1; -fx-background-color: green;" text="Run" textAlignment="CENTER" textFill="WHITE">
+         <Button onAction="#onRunButtonClick" prefHeight="30.0" prefWidth="60.0" style="-fx-start-margin: 1; -fx-background-color: #28a745;" text="Run" textAlignment="CENTER" textFill="WHITE">
             <HBox.margin>
                <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
             </HBox.margin>
             <font>
                <Font name="System Bold Italic" size="14.0" />
             </font></Button>
-         <Button onAction="#onSyntaxButtonClick" prefHeight="30.0" prefWidth="68.0" style="-fx-start-margin: 1; -fx-background-color: red;" text="Syntax" textFill="WHITE">
+         <Button onAction="#onSyntaxButtonClick" prefHeight="30.0" prefWidth="68.0" style="-fx-start-margin: 1; -fx-background-color: #dc3545;" text="Syntax" textFill="WHITE">
             <HBox.margin>
                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </HBox.margin>
             <font>
                <Font name="System Bold Italic" size="14.0" />
             </font></Button>
+
       </children>
       <effect>
          <Lighting bumpInput="$null">
@@ -36,53 +37,71 @@
          </Lighting>
       </effect>
    </HBox>
-   <HBox>
-
-
+   <VBox>
       <children>
-         <VBox>
-            <VBox.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </VBox.margin>
+         <MenuBar>
+           <menus>
+               <Menu mnemonicParsing="false" text="File">
+                   <items>
+                       <MenuItem mnemonicParsing="false" text="Open File" onAction="#onOpenFileButtonClick"/>
+                       <MenuItem mnemonicParsing="false" text="Save Command" onAction="#onSaveCommandButtonClick"/>
+                       <MenuItem mnemonicParsing="false" text="Close" onAction="#doExit" />
+                   </items>
+               </Menu>
+           </menus>
+         </MenuBar>
+         <HBox>
+      
+      
             <children>
-               <TextArea fx:id="inputMultipleCodeText" prefHeight="513.0" prefWidth="595.0">
+               <VBox>
                   <VBox.margin>
-                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                  </VBox.margin></TextArea>
-               <TextField fx:id="inputSingleCodeText" prefHeight="80.0" prefWidth="575.0">
+                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </VBox.margin>
+                  <children>
+                     <TextArea fx:id="inputMultipleCodeText" prefHeight="513.0" prefWidth="595.0">
+                        <VBox.margin>
+                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                        </VBox.margin>
+                     </TextArea>
+                     <TextField fx:id="inputSingleCodeText" prefHeight="80.0" prefWidth="575.0">
+                        <VBox.margin>
+                           <Insets bottom="10.0" left="10.0" right="10.0" />
+                        </VBox.margin>
+                     </TextField>
+                  </children>
+      
+               </VBox>
+      
+               <VBox style="-fx-background-color: lightgray;">
                   <VBox.margin>
-                     <Insets bottom="10.0" left="10.0" right="10.0" />
-                  </VBox.margin></TextField>
-            </children>
-
-         </VBox>
-
-         <VBox style="-fx-background-color: lightgray;">
-            <VBox.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </VBox.margin>
-            <children>
-<!--               <Label fx:id="welcomeText" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #e8e3e3;">-->
-<!--                  <HBox.margin>-->
-<!--                     <Insets left="5.0" />-->
-<!--                  </HBox.margin>-->
-<!--               </Label>-->
-               <Canvas fx:id="canvasId" height="478.0" style="-fx-border-width: 1px;" width="405.0">
-                  <VBox.margin>
+                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                  </VBox.margin>
+                  <children>
+      <!--               <Label fx:id="welcomeText" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: #e8e3e3;">-->
+      <!--                  <HBox.margin>-->
+      <!--                     <Insets left="5.0" />-->
+      <!--                  </HBox.margin>-->
+      <!--               </Label>-->
+                     <Canvas fx:id="canvasId" height="478.0" style="-fx-border-width: 1px;" width="405.0">
+                        <VBox.margin>
+                           <Insets />
+                        </VBox.margin>
+                     </Canvas>
+                  </children>
+                  <opaqueInsets>
                      <Insets />
-                  </VBox.margin></Canvas>
+                  </opaqueInsets>
+                  <HBox.margin>
+                     <Insets bottom="10.0" right="10.0" top="10.0" />
+                  </HBox.margin>
+      
+               </VBox>
+      
             </children>
-            <opaqueInsets>
-               <Insets />
-            </opaqueInsets>
-            <HBox.margin>
-               <Insets bottom="10.0" right="10.0" top="10.0" />
-            </HBox.margin>
-
-         </VBox>
-
+         </HBox>
       </children>
-   </HBox>
+   </VBox>
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
