--- a/src/main/resources/com/narayanjoshi/gplapplication/hello-view.fxml
+++ b/src/main/resources/com/narayanjoshi/gplapplication/hello-view.fxml
@@ -25,7 +25,7 @@
             <children>
                <TabPane prefHeight="473.0" prefWidth="745.0" style="-fx-border-color: white;" tabClosingPolicy="UNAVAILABLE">
                  <tabs>
-                   <Tab text="Thread Tab 1">
+                   <Tab fx:id="threadTabOne" text="Thread Tab 1">
                      <content>
                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                               <children>
@@ -67,7 +67,7 @@
                            </AnchorPane>
                      </content>
                    </Tab>
-                   <Tab text="Thread Tab 2">
+                   <Tab fx:id="threadTabTwo" text="Thread Tab 2">
                      <content>
                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                              <children>
